# AI_Racing

./: .gitignore  CMakeLists.txt
data/: ways.txt
include/: MyStrategy.h
src/: MyStrategy.cpp
src/csimplesocket/: ActiveSocket.cpp  PassiveSocket.cpp  SimpleSocket.cpp
src/model/: Bonus.cpp  Car.cpp  CircularUnit.cpp  Game.cpp  Move.cpp  OilSlick.cpp  Player.cpp  PlayerContext.cpp  Projectile.cpp  RectangularUnit.cpp  Unit.cpp  World.cpp
tools/local-runner/: local-runner.properties  result.txt
